--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "tslint": "5.3.2",
     "typescript": "^2.0.3",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "wallabify": "0.0.15"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.119",
+    "lodash": "^4.17.11",
     "tsify": "^4.0.1"
   }
 }
